--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="stylesheet" href="../s1-17 atividade menu responsitvo/style.css">
+    <link rel="stylesheet" href="./style.css">
     <link rel="stylesheet" href="/gllobalstyles.css">
     <link rel="stylesheet" href="/mediaquery.css">
     <title>Document</title>
@@ -34,7 +34,7 @@
 
         <div class="pesquisa">
             <div class="search">
-                <img class="lupinha" src="/img/icone-loupe-gris.png" alt="lupinha">
+                <img class="lupinha" src="./img/icone-loupe-gris.png" alt="lupinha">
                 <input id="meuInput" placeholder="pesquise por">
             </div>
             <div class="ss">
